--- a/static/styles/login.css
+++ b/static/styles/login.css
@@ -10,10 +10,21 @@ body{
     font-family: sans-serif;
 }
 
+.heading{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.text{
+    font-size: 30px;
+    margin: 10px;
+}
+
 .container{
     display: flex;
     margin: 50px;
-    justify-content: space-between;
+    justify-content: center;
     padding: 100px;
 }
 
@@ -23,6 +34,7 @@ body{
         padding: 20px;
         display: block;
         align-items: center;
+        justify-content: center;
         
     }
 
@@ -46,8 +58,8 @@ body{
 
 }
 .inputbox img{
-    width: 350px;
-    height: 300px;
+    width: 250px;
+    height: 200px;
 }
 
 .loginbox{
@@ -55,7 +67,7 @@ body{
     background-color: white;
     padding: 20px;
     border-radius: 10px;
-    box-shadow:1px 2px 10px black;
+    box-shadow:2px 3px 12px black;
     
 }
 
@@ -70,8 +82,9 @@ body{
     padding: 10px;
     margin: 8px;
     border-radius: 10px;
-    border: 0.5px solid black;
+    border: none;
     font-size: 18px;
+    
 }
 
 .submit{
@@ -84,11 +97,13 @@ body{
     color: white;
     border-radius: 15px;
     transition: 0.5 ease;
+    box-shadow: 2px 1px 10px  black;
 
 }
 
 .submit:hover{
     background-color: rgb(17, 139, 8);
+    box-shadow: 1px 2px 10px green;
 }
 
 .forgot{
